--- a/index-style.css
+++ b/index-style.css
@@ -54,10 +54,10 @@ body{
   border-radius: 25px;
 }
 .menu-bar li:hover {
-  color: black;
+  color: white;
 }
 .menu-bar li:hover::before {
-  background: linear-gradient(to bottom, #e8edec, #d2d1d3);
+  background: linear-gradient(to bottom, #FF293C, #FF479A);
   box-shadow: 0px 3px 20px 0px black;
   transform: scale(1.2);
 }
@@ -143,7 +143,7 @@ body{
 }
 .div-7:hover::before{
   background: linear-gradient(to left,rgba(255, 74, 163, 1) 0%,rgba(255, 35, 41, 1) 100%);
-  box-shadow: 0px 3px 20px 0px black;
+  box-shadow: 0px 3px 20px 0px rgb(240, 44, 135);
   transform: scale(1.1);
 }
 .div-8 {
