--- a/index-style.css
+++ b/index-style.css
@@ -144,7 +144,8 @@ body{
 .div-7:hover::before{
   background: linear-gradient(to left,rgba(255, 74, 163, 1) 0%,rgba(255, 35, 41, 1) 100%);
   box-shadow: 0px 3px 20px 0px rgb(240, 44, 135);
-  transform: scale(1.1);
+  transform: scale(1.03);
+  border-radius: 100px;
 }
 .div-8 {
   max-width: 208px;
