--- a/product-style.css
+++ b/product-style.css
@@ -58,11 +58,11 @@ body{
 }
   
 .menu-bar li:hover {
-  color: black;
+  color: white;
 }
 
 .menu-bar li:hover::before {
-  background: linear-gradient(to bottom, #e8edec, #d2d1d3);
+  background: linear-gradient(to bottom, #FF293C, #FF479A);
   box-shadow: 0px 3px 20px 0px black;
   transform: scale(1.2);
 }
